--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -17,6 +17,9 @@ Enhancements::
 * Use user cache directories for packer. This avoids caching in memory-backed locations to
   prevent unnecessary memory pressure during builds or free space issues on
   low RAM systems (#45)
+* Default timeout for WinRM is 60m (from 30m) to allow slower machines the time to go
+  through Windows' install process
+* Increased default disk size to 20GB
 * Added a --force flag to overwrite pre-existing packer artifacts or vagrant boxes (#46)
 * debug: Passes -on-error=abort to packer to allow investigation of failures (#35)
 * Documentation improvements
