--- a/README.adoc
+++ b/README.adoc
@@ -113,12 +113,8 @@ For example:
 
     malboxes build win10_64_analyst
 
-If you want to customize your configuration, look at the following location
-for a `config.js` file:
-
-* Linux/Unix: `~/.config/malboxes/`
-* Mac OS X: `~/Library/Application Support/malboxes/`
-* Win 7+: `C:\Users\<username>\AppData\Local\malboxes\malboxes\`
+<<_configuration,The configuration section>> contains further information about
+what can be configured with malboxes.
 
 
 === Per analysis instances
@@ -137,6 +133,7 @@ For example:
 
     malboxes spin win7_32_analyst 20160519.cryptolocker.xyz
 
+
 == Configuration
 
 Malboxes' configuration is located in a directory that follows usual operating
@@ -148,6 +145,14 @@ system conventions:
 
 The file is named `config.js` and is copied from an example file on first run.
 link:malboxes/config-example.js[The example configuration] is documented.
+
+We are exploring with the concept of _profiles_ which are stored separately
+than the configuration and can be used to create files, alter the registry or
+install additional packages. See
+link:malboxes/profile-example.js[profile-example.js] for an example
+configuration. This new capacity is experimental and subject to change as we
+experiment with it.
+
 
 == More information
 
