--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -6,6 +6,12 @@
 This document provides a high-level view of the changes introduced in {project-name} by release.
 For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.
 
+== 0.3.1 *unreleased*
+
+Bug fixes::
+* Fixed `jinja2.exceptions.TemplateNotFound: snippets/builder_vsphere_windows.json` ({uri-issue}71[#71])
+
+
 == 0.3.0
 
 BlackHat USA Arsenal 2017 edition!
