--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -9,12 +9,14 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 == 0.3.1 *unreleased*
 
 Enhancements::
-* Added configuration parameters for keyboard locale and proxy settings ({uri-issue}72[#72])
+* Added configuration parameters for keyboard locale and proxy settings
+  ({uri-issue}72[#72], {uri-issue}78[#78])
 * Chocolatey will force the proxy configuration if set ({uri-issue}74[#74])
 * Custom provisioners can be defined in profiles configuration ({uri-issue}73[#73])
 
 Bug fixes::
 * Fixed `jinja2.exceptions.TemplateNotFound: snippets/builder_vsphere_windows.json` ({uri-issue}71[#71])
+* Specified dependencies more precisely ({uri-issue}82[#82])
 
 
 == 0.3.0
