Updated CHANGELOG for PR #94

--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -20,7 +20,7 @@ Enhancements::
 * Chocolatey will force the proxy configuration if set ({uri-issue}74[#74])
 * Custom provisioners can be defined in profiles configuration ({uri-issue}73[#73])
 * `PACKER_CACHE_DIR` environment variable will be honored if present ({uri-issue}99[#99], {uri-issue}100[#100])
-* Removed `fiddler4` chocolatey package ({uri-issue}89[#89])
+* Removed `fiddler4` and `processhacker` chocolatey package ({uri-issue}89[#89], {uri-issue}94[#94])
 * Travis testing: Removed support for Python 3.3 (end of life), added 3.5 and 3.6 ({uri-issue}101[#101])
 
 Bug fixes::
