--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -15,6 +15,7 @@ Enhancements::
   This enables registry changes to alter program configuration. ({uri-issue}86[#86])
 * Experimental profiles registry changes now create missing registry paths by default ({uri-issue}84[#84])
 * Added configuration parameters for keyboard locale and proxy settings ({uri-issue}72[#72], {uri-issue}78[#78])
+* build: New command-line argument to override default configuration file (-c or --config)
 * Chocolatey will force the proxy configuration if set ({uri-issue}74[#74])
 * Custom provisioners can be defined in profiles configuration ({uri-issue}73[#73])
 * `PACKER_CACHE_DIR` environment variable will be honored if present ({uri-issue}99[#99], {uri-issue}100[#100])
