--- a/docs/windows-licenses.adoc
+++ b/docs/windows-licenses.adoc
@@ -10,8 +10,30 @@ If you want to use a trial version make sure you have the following in your
 
     "trial": true
 
-NOTE: Trial versions of Windows 7 were not tested since evaluation ISOs are no
-longer available. Open an issue if you can provide missing information.
+=== Windows 10 32-bit
+
+* filename: 14393.0.160715-1616.RS1_RELEASE_CLIENTENTERPRISEEVAL_OEMRET_X86FRE_EN-US.ISO
+* sha1 checksum: 0b8e56772c71dc7bb73654c61e53998a997e1e4d
+* download link: http://care.dlservice.microsoft.com/dl/download/2/5/4/254230E8-AEA5-43C5-94F6-88CE222A5846/14393.0.160715-1616.RS1_RELEASE_CLIENTENTERPRISEEVAL_OEMRET_X86FRE_EN-US.ISO
+
+=== Windows 10 64-bit
+
+* filename: 14393.0.160715-1616.RS1_RELEASE_CLIENTENTERPRISEEVAL_OEMRET_X64FRE_EN-US.ISO"
+* sha1 checksum: a86ae3d664553cd0ee9a6bcd83a5dbe92e3dc41a
+* download link: http://care.dlservice.microsoft.com/dl/download/2/5/4/254230E8-AEA5-43C5-94F6-88CE222A5846/14393.0.160715-1616.RS1_RELEASE_CLIENTENTERPRISEEVAL_OEMRET_X64FRE_EN-US.ISO"
+
+=== Windows 7 32-bit
+
+* filename: 7600.16385.090713-1255_x86fre_enterprise_en-us_EVAL_Eval_Enterprise-GRMCENEVAL_EN_DVD.iso
+* sha1 checksum: 971fc00183a52c152fe924a6b99fdec011a871c2
+* download link: http://care.dlservice.microsoft.com/dl/download/evalx/win7/x86/EN/7600.16385.090713-1255_x86fre_enterprise_en-us_EVAL_Eval_Enterprise-GRMCENEVAL_EN_DVD.iso
+
+=== Windows 7 64-bit
+
+* filename: 7600.16385.090713-1255_x64fre_enterprise_en-us_EVAL_Eval_Enterprise-GRMCENXEVAL_EN_DVD.iso
+* sha1 checksum: 15ddabafa72071a06d5213b486a02d5b55cb7070
+* download link: http://care.dlservice.microsoft.com/dl/download/evalx/win7/x64/EN/7600.16385.090713-1255_x64fre_enterprise_en-us_EVAL_Eval_Enterprise-GRMCENXEVAL_EN_DVD.iso
+
 
 == Registered
 
@@ -22,10 +44,16 @@ Specify your product key in your `config.js` file. For example:
 
 For registered versions the following ISOs are known to work:
 
-=== Windows 7 32 bits
+=== Windows 7 32-bit
 
 * filename: en_windows_7_professional_with_sp1_x86_dvd_u_677056.iso
 * sha1 checksum: d89937df3a9bc2ec1a1486195fd308cd3dade928
+
+=== Windows 7 64-bit
+
+* filename: en_windows_7_professional_with_sp1_x64_dvd_u_676939.iso
+* sha1 checksum: 0bcfc54019ea175b1ee51f6d2b207a3d14dd2b58
+
 
 === Volume licensing
 
