--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -27,6 +27,9 @@ Bug fixes::
 * Fixed `jinja2.exceptions.TemplateNotFound: snippets/builder_vsphere_windows.json` ({uri-issue}71[#71])
 * Specified dependencies more precisely ({uri-issue}82[#82])
 
+Infrastructure Improvements::
+* Automated nightly VM builds will catch upstream problems sooner ({uri-issue}106[#106])
+
 
 == 0.3.0
 
