--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -21,6 +21,7 @@ Enhancements::
 * `PACKER_CACHE_DIR` environment variable will be honored if present ({uri-issue}99[#99], {uri-issue}100[#100])
 * On debug, Malboxes will output the temporary packer config created ({uri-issue}75[#75], {uri-issue}102[#102])
 * Removed `fiddler4` and `processhacker` chocolatey package ({uri-issue}89[#89], {uri-issue}94[#94])
+* Tolerate chocolatey package install failures caused by failed downloads ({uri-issue}107[#107])
 * Travis testing: Removed support for Python 3.3 (end of life), added 3.5 and 3.6 ({uri-issue}101[#101])
 
 Bug fixes::
