--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -6,7 +6,9 @@
 This document provides a high-level view of the changes introduced in {project-name} by release.
 For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.
 
-== 0.3.1 *unreleased*
+== 0.4.0
+
+SecTor 2018 Edition!
 
 Enhancements::
 * Experimental profiles feature gained shortcut creation support.
@@ -30,6 +32,21 @@ Bug fixes::
 
 Infrastructure Improvements::
 * Automated nightly VM builds will catch upstream problems sooner ({uri-issue}106[#106])
+
+=== Release meta
+
+* Released on: 2018-09-02
+* Released by: @obilodeau
+* Release whiskey: Lot 40 Rye
+
+Action: {uri-repo}/issues?q=is%3Aissue%20is%3Aclosed%20created%3A2017-07-25..2018-09-02[issues created and resolved] |
+{uri-repo}/compare/0.3.0...0.4.0[full diff]
+
+=== Credits
+
+Thanks to the following people who contributed to this release:
+
+Camille Moncelier, Hugo Genesse, Mathieu Tarral, Olivier Bilodeau, PiX, snakems
 
 
 == 0.3.0
