--- a/README.adoc
+++ b/README.adoc
@@ -41,13 +41,6 @@ https://github.com/gosecure/malboxes
 
     apt install vagrant git python3-pip
 
-=== AWS
-Run this command after normal installation:
-    
-    vagrant plugin install vagrant-aws
-
-NOTE: The AWS feature has only been tested on Linux for the moment and EC2 does not support 32-bit desktop version of Windows 10.
-
 == Installation
 
 === Linux/Unix
@@ -57,7 +50,6 @@ NOTE: The AWS feature has only been tested on Linux for the moment and EC2 does 
 * `pip install` malboxes:
 +
     sudo pip3 install git+https://github.com/GoSecure/malboxes.git#egg=malboxes
-
 
 === Windows
 
@@ -100,6 +92,12 @@ installed. Otherwise, follow the <<Manually,manual installation procedure>>.
     pip3 install setuptools
     pip3 install -U git+https://github.com/GoSecure/malboxes.git#egg=malboxes
 
+=== To deploy on AWS (optional)
+Run this command after normal installation:
+    
+    vagrant plugin install vagrant-aws
+
+NOTE: The AWS feature has only been tested on Linux for the moment and EC2 does not support 32-bit desktop version of Windows 10.
 
 == Usage
 
@@ -143,7 +141,7 @@ For example:
 
     malboxes spin win7_32_analyst 20160519.cryptolocker.xyz
 
-=== AWS
+=== To deploy on AWS (optional)
 
 Malboxes can upload and interact with a VM on the Amazon Web serivces. To do so, follow these steps:
 
@@ -152,7 +150,7 @@ link:https://docs.aws.amazon.com/quickstarts/latest/s3backup/step-1-create-bucke
 
 . Your instance also requires a link:https://docs.aws.amazon.com/vpc/latest/userguide/VPC_SecurityGroups.html#CreatingSecurityGroups[security group] with at least a rule allowing inbound connections for WinRM (Type: WinRM-HTTP, Protocol: TCP, Port Range: 5985, Source: host's public IP).
 
-. If the default config is used, change the hypervisor to aws and fill the mandatory options related. Otherwise, be sure to add all the options about AWS to your custom config.
+. If the <<_configuration,default config>> is used, change the hypervisor to aws and fill the mandatory options related. Otherwise, be sure to add all the options about AWS to your custom config.
 
 . Finally, you can follow the same steps described in the <<Box creation>> and the <<Per analysis instances>> sections to launch your instance!
 
@@ -173,18 +171,18 @@ Then run:
 
 ==== RDP
 
-To connect to an instance on the cloud using RDP, run this command at the same location of your `+Vagrantfile+`: 
+To connect to an instance on the cloud using RDP, run this command at the same location of your `Vagrantfile`: 
 
     vagrant rdp -- /cert-ignore
 
 For this to work, the instance will require a security group allowing RDP inbound connections (Type: RDP, Protocol: TCP, Port Range: 3389, Source: host's public IP).
 
-NOTE: You can safely ignore the following error because rsync is not yet implemented:  << No host IP was given to the Vagrant core NFS helper. This is an internal error that should be reported as a bug. >> 
+NOTE: You can safely ignore the following error because rsync is not yet implemented: `No host IP was given to the Vagrant core NFS helper. This is an internal error that should be reported as a bug.` 
 
 
 ==== Stopping an Instance
 
-To stop an instance on the cloud, run this command at the same location of your `+Vagrantfile+`:
+To stop an instance on the cloud, run this command at the same location of your `Vagrantfile`:
 
     vagrant halt
 
