--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -8,6 +8,9 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 
 == <next release>
 
+Bug fixes::
+  * Removed APM from default chocolatey packages ({uri-issue}119[#119])
+
 Infrastructure Improvements::
 * Further improvements to Jenkins CI system fixed Windows 7 build issues ({uri-issue}108[#108], {uri-issue}110[#110])
 
