--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -10,6 +10,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 
 Bug fixes::
   * Removed APM from default chocolatey packages ({uri-issue}119[#119])
+  * Disabled malware protection, cloud and automatic sample submission on Windows 10 ({uri-issue}120[#120])
 
 Infrastructure Improvements::
 * Further improvements to Jenkins CI system fixed Windows 7 build issues ({uri-issue}108[#108], {uri-issue}110[#110])
