--- a/README.adoc
+++ b/README.adoc
@@ -4,13 +4,17 @@
 :twob: https://twitter.com/obilodeau
 :twhg: https://twitter.com/hugospns
 // github stuff
-ifdef::env-github[:status:]
+ifdef::env-github[:github:]
 
-// Travis Build Status
-ifdef::status[]
+image:https://raw.githubusercontent.com/GoSecure/malboxes/master/docs/logos/main.svg[Malboxes Logo]
+
+ifdef::github[]
 .*Project health*
-image:https://img.shields.io/travis/GoSecure/malboxes/master.svg[Build
-Status (Travis CI), link=https://travis-ci.org/GoSecure/malboxes]
+// Travis Build Status
+image:https://img.shields.io/travis/GoSecure/malboxes/master.svg[Build Status (Travis CI), link=https://travis-ci.org/GoSecure/malboxes]
+// BlackHat Arsenal 2017
+image:https://raw.githubusercontent.com/toolswatch/badges/master/arsenal/usa/2017.svg[Black Hat Arsenal, link=https://www.toolswatch.org/2017/06/the-black-hat-arsenal-usa-2017-phenomenal-line-up-announced/]
+// Gitter Chat
 image:https://badges.gitter.im/malboxes_/Lobby.svg[link="https://gitter.im/malboxes_/Lobby?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge"]
 endif::[]
 
