--- a/README.adoc
+++ b/README.adoc
@@ -13,12 +13,12 @@ endif::[]
 
 ifdef::github[]
 // logo on github
-image:https://raw.githubusercontent.com/GoSecure/malboxes/master/docs/logos/main.svg[Malboxes Logo]
+image:https://raw.githubusercontent.com/GoSecure/malboxes/master/docs/logos/main.svg[Malboxes Logo, opts=inline]
 .*Project health*
 // Travis Build Status
 image:https://img.shields.io/travis/GoSecure/malboxes/master.svg[Build Status (Travis CI), link=https://travis-ci.org/GoSecure/malboxes]
 // BlackHat Arsenal 2017
-image:https://raw.githubusercontent.com/toolswatch/badges/master/arsenal/usa/2017.svg[Black Hat Arsenal, link=https://www.toolswatch.org/2017/06/the-black-hat-arsenal-usa-2017-phenomenal-line-up-announced/]
+image:https://raw.githubusercontent.com/toolswatch/badges/master/arsenal/usa/2017.svg[Black Hat Arsenal, link=https://www.toolswatch.org/2017/06/the-black-hat-arsenal-usa-2017-phenomenal-line-up-announced/, opts=inline]
 // Gitter Chat
 image:https://badges.gitter.im/malboxes_/Lobby.svg[link="https://gitter.im/malboxes_/Lobby?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge"]
 endif::[]
