--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -13,8 +13,7 @@ Bug fixes::
   * Disabled malware protection, cloud and automatic sample submission on Windows 10 ({uri-issue}120[#120])
 
 Infrastructure Improvements::
-* Further improvements to Jenkins CI system fixed Windows 7 build issues ({uri-issue}108[#108], {uri-issue}110[#110])
-* Jenkins CI system can now perform smoke tests on external PRs ({uri-issue}123[#123])
+* Various Jenkins CI system improvements ({uri-issue}108[#108], {uri-issue}110[#110], {uri-issue}123[#123], {uri-issue}124[#124])
 
 
 == 0.4.0
