--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -17,6 +17,7 @@ Enhancements::
 Bug fixes::
   * Removed APM from default chocolatey packages ({uri-issue}119[#119])
   * Disabled malware protection, cloud and automatic sample submission on Windows 10 ({uri-issue}120[#120])
+  * Fix Windows 10 download links ({uri-issue}113[#113], {uri-issue}116[#116])
 
 Infrastructure Improvements::
 * Various Jenkins CI system improvements ({uri-issue}108[#108], {uri-issue}110[#110], {uri-issue}123[#123], {uri-issue}124[#124])
