Windows 10 1903 version support (#128)
* Splits Windows 10 templates into sub-versions
* Support for Windows 10 1903 (19H1) x64 and x86 added
* doc: more Windows 10 download links and hashes
* Default Windows 10 builds now defaults to 19H1 (1903)
* Added instructions about Defender Tamper Protection
* Build system: updated Packer version
* Added a mechanism to communicate from the template to Malboxes core

Used it to communicate to the user if a specific version of Windows is spun so that it has instructions on how to disable Defender.

* Notice about Defender Tamper Protection and new Defender disable script
* Windows 7 template now named x86 and x64 instead of 32 and 64

--- a/README.adoc
+++ b/README.adoc
@@ -35,7 +35,7 @@ https://github.com/gosecure/malboxes
 == Requirements
 
 * Python 3.3+
-* packer: https://www.packer.io/docs/install/index.html
+* https://www.packer.io/docs/install/index.html[Packer]
 * vagrant: https://www.vagrantup.com/downloads.html
 * https://www.virtualbox.org/wiki/Downloads[VirtualBox] or an vSphere / ESXi server
 
@@ -132,7 +132,7 @@ include it in a Vagrantfile afterwards.
 
 For example:
 
-    malboxes build win10_64_analyst
+    malboxes build win10_x64_analyst
 
 <<_configuration,The configuration section>> contains further information about
 what can be configured with malboxes.
@@ -140,7 +140,7 @@ what can be configured with malboxes.
 
 === Per analysis instances
 
-    malboxes spin win10_64_analyst <name>
+    malboxes spin win10_x64_analyst <name>
 
 This will create a `Vagrantfile` prepared to use for malware analysis. Move it
 into a directory of your choice and issue:
@@ -152,7 +152,7 @@ can be changed by commenting the relevant part of the `Vagrantfile`.
 
 For example:
 
-    malboxes spin win7_32_analyst 20160519.cryptolocker.xyz
+    malboxes spin win7_x86_analyst 20160519.cryptolocker.xyz
 
 === To deploy on AWS (optional)
 
