--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -13,6 +13,9 @@ Enhancements::
 * Reintroduced `fiddler` in the default configuration ({uri-issue}96[#96], {uri-issue}131[#131])
 * Documentation improvements ({uri-issue}132[#132], {uri-issue}133[#133])
 
+Bug fixes::
+* Fixed "Deprecated configuration key" with Packer v1.6.0 and later ({uri-issue}141[#141], {uri-issue}142[#142])
+
 
 == 0.5.0
 
